[Scopes]-fixed missing padding in scopes tree

--- a/src/components/SecondaryPanes/Scopes.css
+++ b/src/components/SecondaryPanes/Scopes.css
@@ -29,6 +29,10 @@
   overflow: auto;
 }
 
+.scopes-list {
+  padding-left: 4px;
+}
+
 .scopes-list .function-signature {
   display: inline-block;
 }
